--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -7,6 +7,29 @@
 
 /*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.newfont {
+	font: bold 18px/30px Georgia, serif;
+	color: #1e90ff;
+}
+
+
 html {
     font-family: sans-serif;
     -webkit-text-size-adjust: 100%;
@@ -2878,6 +2901,7 @@ th {
 	width: 100%;
     height: 340px;
     overflow-y: scroll;
+	overflow-x: hidden;
 }
 	
 .settablescroll2 {
@@ -3751,6 +3775,50 @@ select[multiple].input-lg {
     border: 1px solid transparent;
     border-radius: 4px;
 }
+
+.button {
+  border-radius: 4px;
+  background-color: #f4511e;
+  border: none;
+  color: #FFFFFF;
+  text-align: center;
+  font-size: 24px;
+  padding: 8px;
+  width: 100%;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
+}
+
+.button span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+.button span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+
+.button:hover span {
+  padding-right: 25px;
+}
+
+.button:hover span:after {
+  opacity: 1;
+  right: 0;
+}
+
+.textthis {
+	text-align: center;
+}
+
 
 .btn:focus,
 .btn:active:focus,
