--- a/views/merchantlanding.handlebars
+++ b/views/merchantlanding.handlebars
@@ -1,12 +1,14 @@
 {{#if user.businessname}}
-		
-		
+				
 				<div class="panel panel-default">
 					<div class="panel-heading">
+						<div class="textthis">
 						<h4>Current <strong>{{user.businessname}}</strong> Queue</h4>
-					</div>		  
-					
-					<table class="table">
+						</div>		 
+					</div>
+						
+						<div class="settablescroll">
+						<table class="table">
 						<thead class="thead-inverse">
 	  						<tr>
 								<th class="col-xs-1">Position</th>
@@ -18,18 +20,21 @@
 								<th class="col-xs-2">Complete</th>
 	  						</tr>
   						</thead>
+
 						{{#each queuedata }}
 						<tbody>
 							<tr>
 								<td class="col-xs-1">{{inc @index}}</td>
-								<td class="col-xs-3">{{firstname}} {{lastname}}</td>
+								<td class="col-xs-3"><div class="newfont">{{firstname}} {{lastname}}</div></td>
 								<td class="col-xs-2">{{email}}</td>
 								<td class="col-xs-2">{{phonenumber}}</td>
 								<td class="col-xs-2">{{formatDate date}}</td>
 								{{#compare @index "==" 0}}
     								<td class="col-xs-2">
+										<div class="newfont">
 										<p><time>00:00:00</time></p>
 										<div id="start"></div>
+										</div>
 									</td>
 								{{/compare}}
 								<!--{{#compare @index "==" 2}}
@@ -43,13 +48,15 @@
 									<input type="hidden" class="form-control" name="businessQueue" value="{{@root.user.businessUniqueID}}">
 									<input type="hidden" name="id" class="form-control" value={{_id}}>
 									<input type="hidden" name="email" class="form-control" value={{email}}>
-									<button type="submit" class="btn btn-md btn-info">Complete</button>
+									<button type="submit" class="button"><span>Complete</span></button>
 									</form>
 								</td>
 							</tr>
 						</tbody>
 						{{/each}}
-					</table>
+						</table>
+						</div>
+				
 				</div>
 			</div>
 		</div>
